Título animado y boton de WhatsApp

--- a/catalogo.html
+++ b/catalogo.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Golosinas Aries♈🔥 - Catálogo</title>
+  <title>Golosinas Aries  ♈ 🔥 - Catálogo</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
 
   <header>
-    <h1>Golosinas Aries<span class="emoji">♈🔥</span></h1>
+    <div class="titulo-contenedor"></div>
+    <h1 class="titulo-animado">Golosinas Aries <span class="emoji">♈🔥</span></h1>
     <nav>
       <a href="index.html">Inicio</a>
       <a href="catalogo.html">Catálogo</a>
@@ -236,5 +239,12 @@
 </footer>
 
   <script src="js/catalogo.js"></script>
+
+  <!-- Botón flotante de WhatsApp -->
+<a href="https://wa.me/542236010443" target="_blank" class="whatsapp-flotante">
+  <i class="fab fa-whatsapp"></i>
+</a>
+
+  
 </body>
 </html>
