--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto - Golosinas Aries</title>
+  <title>Contacto - Golosinas Aries  ♈ 🔥</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
   <!-- Font Awesome para iconos -->
@@ -13,7 +13,8 @@
 
   <!-- Header -->
   <header>
-    <h1>Golosinas Aries</h1>
+    <div class="titulo-contenedor"></div>
+    <h1 class="titulo-animado">Golosinas Aries <span class="emoji">♈🔥</span></h1>
     <nav>
       <a href="index.html">Inicio</a>
       <a href="catalogo.html">Catálogo</a>
@@ -57,6 +58,15 @@
     </div>
     <a href="index.html" class="back-to-top">Golosinas Aries♈🔥</a>
   </footer>
+
+  <script src="js/script.js"></script>
+
+  <!-- Botón flotante de WhatsApp -->
+<a href="https://wa.me/542236010443" target="_blank" class="whatsapp-flotante">
+  <i class="fab fa-whatsapp"></i>
+</a>
+
+
 
 </body>
 </html>
