Título animado y boton de WhatsApp

--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
   <!-- Header -->
   <header>
     <div class="titulo-contenedor"></div>
-    <h1 class="titulo-animado">Golosinas Aries <span class="emoji">♈🔥</span></h1>
+    <h1 class="titulo-animado">Envios a todo el país <span class="emoji">📦</span>  -  Golosinas Aries <span class="emoji">♈🔥</span></h1>
     <nav>
       <a href="index.html">Inicio</a>
       <a href="catalogo.html">Catálogo</a>
