--- a/index.html
+++ b/index.html
@@ -58,24 +58,42 @@
           </a>
           <button onclick="window.location.href='catalogo.html'">Ver más</button>
         </div>
+        <div class="card">
+          <img src="img/gallinitas.jpg" alt="Nutello">
+          <h3>Gallinitas</h3>
+          <p>Gallinitas.</p>
+          <a href="https://wa.me/542236010443?text=Hola,%20quiero%20reservar%20la%20Alcancía%20rellena" target="_blank" class="btn-card whatsapp-btn">
+          Reservar por WhatsApp
+          </a>
+          <button onclick="window.location.href='catalogo.html'">Ver más</button>
+        </div>
       </div>
     </section>
 
-    <!-- Sobre Nosotros -->
-    <section class="sobre-nosotros">
-      <h3>¿Quiénes somos?</h3>
-      <p>En Golosinas Aries <span class="emoji">♈🔥</span> nos dedicamos a crear experiencias dulces y divertidas. Somos una familia emprendedora de Miramar, ¡contactanos!</p>
-      <a href="https://wa.me/542236010443" target="_blank" class="social-btn whatsapp">WhatsApp</a>
-    </section>
-
+  
   </main>
 
   <!-- Footer con botones de redes sociales -->
 <footer>
-  <a href="https://instagram.com/golosinasaries" target="_blank" class="social-btn instagram">Instagram</a>
-  <a href="https://facebook.com/golosinasaries" target="_blank" class="social-btn facebook">Facebook</a>
-  <!-- Botón volver arriba -->
-  <a href="#" class="back-to-top">⬆ Volver arriba</a>
+ <p> Si tienes alguna pregunta, no dudes en contactarnos. ¡Estamos acá para ayudarte!</p>
+    <!-- Botones sociales -->
+    <div class="social-buttons-wrapper">
+      <div class="social-buttons">
+        <a href="https://mail.google.com/mail/?view=cm&to=golosinasaries@gmail.com" class="social-btn email">
+          <i class="fas fa-envelope"></i> Email
+        </a>
+        <a href="https://instagram.com/golosinasaries" target="_blank" class="social-btn instagram">
+          <i class="fab fa-instagram"></i> Instagram
+        </a>
+        <a href="https://www.facebook.com/profile.php?id=61577104861271&locale=es_LA" target="_blank" class="social-btn facebook">
+          <i class="fab fa-facebook"></i> Facebook
+        </a>
+        <a href="https://wa.me/542236010443" target="_blank" class="social-btn whatsapp">
+          <i class="fab fa-whatsapp"></i> WhatsApp
+        </a>
+        <a href="#" class="back-to-top">⬆ Volver arriba</a>
+      </div>
+    </div>
 </footer>
 
 <script src="js/script.js"></script>
