--- a/contacto.html
+++ b/contacto.html
@@ -25,13 +25,8 @@
   <!-- Contacto -->
   <main class="contacto">
 
-    <!-- Botón destacado WhatsApp -->
-    <div class="whatsapp-button-wrapper">
-      <a href="https://wa.me/542236010443" target="_blank" class="social-btn whatsapp">
-        <i class="fab fa-whatsapp"></i> WhatsApp
-      </a>
-    </div>
-
+   <h2 class="hero-buttons">Contacto</h2>
+    <p> Si tienes alguna pregunta, no dudes en contactarnos. ¡Estamos acá para ayudarte!</p>
     <!-- Botones sociales -->
     <div class="social-buttons-wrapper">
       <div class="social-buttons">
@@ -44,6 +39,9 @@
         <a href="https://www.facebook.com/profile.php?id=61577104861271&locale=es_LA" target="_blank" class="social-btn facebook">
           <i class="fab fa-facebook"></i> Facebook
         </a>
+        <a href="https://wa.me/542236010443" target="_blank" class="social-btn whatsapp">
+          <i class="fab fa-whatsapp"></i> WhatsApp
+        </a>
       </div>
     </div>
 
@@ -51,12 +49,14 @@
 
   <!-- Footer con ubicación y volver arriba -->
   <footer>
+    
     <div class="ubicacion">
       <a href="https://www.google.com/search?gs_ssp=eJzj4tLP1TcwMrO0TK8yYPQSyc0sSsxNLFJIKk3Nyy9WSMwsSi0GALAcCyM&q=miramar+buenos+aires&oq=miramar%2C+bueno&gs_lcrp=EgZjaHJvbWUqBwgBEC4YgAQyBggAEEUYOTIHCAEQLhiABDIHCAIQABiABDIHCAMQABiABDIHCAQQABiABDIICAUQABgWGB4yCAgGEAAYFhgeMggIBxAAGBYYHjIICAgQABgWGB7SAQg3NTY2ajBqNKgCALACAA&sourceid=chrome&ie=UTF-8" target="_blank" class="social-btn location">
         <i class="fas fa-map-marker-alt"></i> Miramar, Buenos Aires
       </a>
+      <a href="index.html" class="back-to-top">Volver al inicio ♈🔥</a>
     </div>
-    <a href="index.html" class="back-to-top">Golosinas Aries♈🔥</a>
+    
   </footer>
 
   <script src="js/script.js"></script>
