--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
 <body>
   <!-- Header -->
   <header>
-    <div class="titulo-contenedor"></div>
-    <h1 class="titulo-animado">Envios a todo el país <span class="emoji">📦</span>  -  Golosinas Aries <span class="emoji">♈🔥</span></h1>
+    <div class="titulo-contenedor">
+      <img src="img/logo.jpg" alt="Logo Golosinas Aries" style="max-width:60px;width:100%;height:auto;object-fit:contain;filter:drop-shadow(0 2px 8px rgba(106,27,154,0.12));border-radius:12px;">
+      <h1 class="titulo-animado">Envios a todo el país <span class="emoji">📦</span>  -  Golosinas Aries <span class="emoji">♈🔥</span></h1>
+    </div>
     <nav>
       <a href="index.html">Inicio</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
     </nav>
-    <aside class="hero" style="background-image: url('img/hero-golosinas.jpg');">
-      <div class="hero-overlay"></div>
-      <h2>Bienvenidos a Golosinas Aries <span class="emoji">♈🔥</span></h2>
-      <p>Golosinas, juguetes y combos personalizados.</p>
-    </aside>
   </header>
+
+  <!-- Hero -->
+  <aside class="hero" style="background-image: url('img/hero-golosinas.jpg');">
+    <div class="hero-overlay"></div>
+    <h2>Bienvenidos a Golosinas Aries <span class="emoji">♈🔥</span></h2>
+    <p>Golosinas, juguetes y combos personalizados.</p>
+  </aside>
 
   <!-- Hero -->
   <main>
