cambios en header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="titulo-animado">Envios a todo el país <span class="emoji">📦</span>  -  Golosinas Aries <span class="emoji">♈🔥</span></h1>
     </div>
     <nav>
-      <a href="index.html">Inicio</a>
+      <a class= "header"  href="index.html">Inicio</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
     </nav>
