Actualizo HTML y estilos del catálogo, contacto e inicio

--- a/catalogo.html
+++ b/catalogo.html
@@ -256,9 +256,11 @@
 
   <script src="js/catalogo.js"></script>
 
-  <!-- Botón flotante de WhatsApp -->
-<a href="https://wa.me/542236010443" target="_blank" class="whatsapp-flotante">
-  <i class="fab fa-whatsapp"></i>
+<!-- Botón flotante de WhatsApp -->
+<a href="https://wa.me/542236010443?text=Hola%2C%20quiero%20más%20información" target="_blank">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" 
+       alt="WhatsApp" 
+       style="width:65px; height:65px; position:fixed; bottom:20px; right:20px; z-index:1000;">
 </a>
 
   
