Corrijo la palabra unidaTes

--- a/catalogo.html
+++ b/catalogo.html
@@ -45,7 +45,7 @@
         <div class="card">
           <img src="img/oblita.jpg" alt="Cubanitos" onclick="abrirModal(this)">
           <h3>Cubanitos</h3>
-          <p>$5.800 (48 unidates)</p>
+          <p>$5.800 (48 unidades)</p>
         </div>
         <div class="card">
           <img src="img/bombones_surtidos.jpg" alt="Bombones Surtidos" onclick="abrirModal(this)">
