--- a/contacto.html
+++ b/contacto.html
@@ -11,16 +11,24 @@
 </head>
 <body>
 
-  <!-- Header -->
-  <header>
-    <div class="titulo-contenedor"></div>
-    <h1 class="titulo-animado">Envios a todo el país <span class="emoji">📦</span>  -  Golosinas Aries <span class="emoji">♈🔥</span></h1>
+<!-- Header -->
+<header>
+  <aside class="logo-contenedor">
+    <img src="img/logo.jpg" alt="Logo Golosinas Aries">
+  </aside>
+  <div class="titulo-contenedor">
+    <h1 class="titulo-animado">
+      Envíos a todo el país <span class="emoji">📦</span> - Golosinas Aries <span class="emoji">♈🔥</span>
+    </h1>
     <nav>
       <a href="index.html">Inicio</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
     </nav>
-  </header>
+  </div>
+</header>
+
+
 
   <!-- Contacto -->
   <main class="contacto">
@@ -54,11 +62,6 @@
   </footer>
 
   <script src="js/script.js"></script>
-
-  <!-- Botón flotante de WhatsApp -->
-<a href="https://wa.me/542236010443" target="_blank" class="whatsapp-flotante">
-  <i class="fab fa-whatsapp"></i>
-</a>
 
 <!-- Botón flotante de WhatsApp -->
 <a href="https://wa.me/542236010443?text=Hola%2C%20quiero%20más%20información" target="_blank">
