--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <div class="titulo-contenedor">
-      <img src="img/logo.jpg" alt="Logo Golosinas Aries" style="max-width:60px;width:100%;height:auto;object-fit:contain;filter:drop-shadow(0 2px 8px rgba(106,27,154,0.12));border-radius:12px;">
-      <h1 class="titulo-animado">Envios a todo el país <span class="emoji">📦</span>  -  Golosinas Aries <span class="emoji">♈🔥</span></h1>
-    </div>
+  
+<!-- Header -->
+<header>
+  <aside class="logo-contenedor">
+    <img src="img/logo.jpg" alt="Logo Golosinas Aries">
+  </aside>
+  <div class="titulo-contenedor">
+    <h1 class="titulo-animado">
+      Envíos a todo el país <span class="emoji">📦</span> - Golosinas Aries <span class="emoji">♈🔥</span>
+    </h1>
     <nav>
-      <a class= "header"  href="index.html">Inicio</a>
+      <a href="index.html">Inicio</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
     </nav>
-  </header>
+  </div>
+</header>
+
 
   <!-- Hero -->
   <aside class="hero" style="background-image: url('img/hero-golosinas.jpg');">
@@ -101,11 +107,6 @@
 </footer>
 
 <script src="js/script.js"></script>
-
-<!-- Botón flotante de WhatsApp -->
-<a href="https://wa.me/542236010443" target="_blank" class="whatsapp-flotante">
-  <i class="fab fa-whatsapp"></i>
-</a>
 
 <!-- Botón flotante de WhatsApp -->
 <a href="https://wa.me/542236010443?text=Hola%2C%20quiero%20más%20información" target="_blank">
