--- a/catalogo.html
+++ b/catalogo.html
@@ -10,16 +10,24 @@
 
 </head>
 <body>
-
-  <header>
-    <div class="titulo-contenedor"></div>
-    <h1 class="titulo-animado">Envios a todo el país <span class="emoji">📦</span>  -  Golosinas Aries <span class="emoji">♈🔥</span></h1>
+  
+<!-- Header -->
+<header>
+  <aside class="logo-contenedor">
+    <img src="img/logo.jpg" alt="Logo Golosinas Aries">
+  </aside>
+  <div class="titulo-contenedor">
+    <h1 class="titulo-animado">
+      Envíos a todo el país <span class="emoji">📦</span> - Golosinas Aries <span class="emoji">♈🔥</span>
+    </h1>
     <nav>
       <a href="index.html">Inicio</a>
       <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
     </nav>
-  </header>
+  </div>
+</header>
+
 
   <main>
 
