--- a/contacto.html
+++ b/contacto.html
@@ -33,8 +33,10 @@
   <!-- Contacto -->
   <main class="contacto">
 
-   <h2 class="hero-buttons">Contacto</h2>
+   <h2 class="hero-buttons"><span class="emoji">♈🔥</span></h2>
+    <p class="hero-buttons"> Hacemos envíos a todo el país.</p>
     <p class="hero-buttons"> Si tienes alguna pregunta, no dudes en contactarnos. ¡Estamos acá para ayudarte!</p>
+    
     
   </main>
 
