--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<!-- Header -->
+  <!-- Header -->
 <header>
   <aside class="logo-contenedor">
     <img src="img/logo.jpg" alt="Logo Golosinas Aries">
@@ -28,55 +28,49 @@
 </header>
 
 
-  <!-- Hero -->
-  <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
-    <div class="hero-overlay"></div>
-    <h2>Bienvenidos a Golosinas Aries <span class="emoji">♈🔥</span></h2>
-    <p>Golosinas, juguetes y combos personalizados.</p>
-  </aside>
+<aside class="hero" style="background-image: url('img/hero-golosinas.jpg');">
+  <div class="hero-overlay"></div>
+  <h2>Bienvenidos a Golosinas Aries <span class="emoji">♈🔥</span></h2>
+  <p>Golosinas, juguetes y combos personalizados.</p>
+</aside>
 
-  <!-- Hero -->
+
   <main>
    <!-- Productos Destacados -->
     <section class="destacados">
+
       <h2>Productos en Promoción</h2>
       <div class="portfolio">
+
         <div class="card">
           <img src="img/alcancias.jpg" alt="Alcancía divertida">
           <h3>Alcancía rellena</h3>
           <p>Perfecta para guardar tus monedas y comer ricas gomitas.</p>
-          <a href="https://wa.me/542236010443?text=Hola,%20quiero%20reservar%20la%20Alcancía%20rellena" target="_blank" class="btn-card whatsapp-btn">
-          Reservar por WhatsApp
-          </a>
-          <button onclick="window.location.href='catalogo.html'">Ver más</button>
+        <button onclick="window.location.href='catalogo.html'">Ver más</button>
         </div>
+
         <div class="card">
           <img src="img/burbujero.jpg" alt="Burbujero mágico">
           <h3>Burbujero mágico</h3>
-          <p>Divertido juego de burbujas.</p>
-          <a href="https://wa.me/542236010443?text=Hola,%20quiero%20reservar%20la%20Alcancía%20rellena" target="_blank" class="btn-card whatsapp-btn">
-          Reservar por WhatsApp
+          <p>Burbujero con diferentes formas.</p>
           </a>
           <button onclick="window.location.href='catalogo.html'">Ver más</button>
         </div>
+
         <div class="card">
           <img src="img/nutello.jpg" alt="Nutello">
           <h3>Nutello</h3>
           <p>Snack dulce irresistible para grandes y chicos.</p>
-          <a href="https://wa.me/542236010443?text=Hola,%20quiero%20reservar%20la%20Alcancía%20rellena" target="_blank" class="btn-card whatsapp-btn">
-          Reservar por WhatsApp
           </a>
           <button onclick="window.location.href='catalogo.html'">Ver más</button>
         </div>
+
         <div class="card">
           <img src="img/gallinitas.jpg" alt="Nutello">
           <h3>Gallinitas</h3>
-          <p>Gallinitas.</p>
-          <a href="https://wa.me/542236010443?text=Hola,%20quiero%20reservar%20la%20Alcancía%20rellena" target="_blank" class="btn-card whatsapp-btn">
-          Reservar por WhatsApp
-          </a>
           <button onclick="window.location.href='catalogo.html'">Ver más</button>
         </div>
+
       </div>
     </section>
 
