--- a/catalogo.html
+++ b/catalogo.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-  
+
 <!-- Header -->
 <header>
   <aside class="logo-contenedor">
@@ -35,196 +35,191 @@
       <input type="text" id="search" placeholder="🔍 Buscar producto..." onkeyup="filtrarProductos()">
     </section>
 
-    <section class="contenedor-secciones">
+    
       <section class="seccion">
-        <h2 class="hero-buttons">Golosinas</h2>
+        <h2 class="hero-buttons">Golosinas y juguetes</h2>
         <div class="portfolio">
 
-        <div class="card">
-          <img src="img/bull_dog_frutillaa.jpg" alt="Bull dog" onclick="abrirModal(this)">
-          <h3>Gomitas Bull dog</h3>
-          <p>$6.800 (360g)</p>
-        </div>
           <div class="card">
-          <img src="img/gomutcho_acidos.jpg" alt="Gomitas Gomutcho acidos" onclick="abrirModal(this)">
-          <h3>Gomitas acidas</h3>
-          <p>$5.800 (500g)</p>
-        </div>
-        <div class="card">
-          <img src="img/oblita.jpg" alt="Cubanitos" onclick="abrirModal(this)">
-          <h3>Cubanitos</h3>
-          <p>$5.800 (48 unidades)</p>
-        </div>
-        <div class="card">
-          <img src="img/bombones_surtidos.jpg" alt="Bombones Surtidos" onclick="abrirModal(this)">
-          <h3>Bombones Surtidos</h3>
-          <p>$9.000 (50 unidades)</p>
-        </div>
-        <div class="card">
-          <img src="img/anillos.jpg" alt="Anillos" onclick="abrirModal(this)">
-          <h3>Gomitas Anillos</h3>
-          <p>$7.800 (700g)</p>
-        </div>
-        <div class="card">
-          <img src="img/chicle.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
-          <h3>Chicle por metro</h3>
-          <p>$12.000,00</p>
-        </div>
-        <div class="card">
-          <img src="img/gallinitas.jpg" alt="Gallinitas" onclick="abrirModal(this)">
-          <h3>Gallinitas</h3>
-          <p>$8.500 (25 unidades)</p>
-        </div>
-        <div class="card">
-          <img src="img/yummy_frutilla_com_crema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
-          <h3>Gomitas Yummy frutilla con crema</h3>
-          <p>$6.800(500g)</p>
-        </div>
-        <div class="card">
-          <img src="img/ojoschicos.jpg" alt="Ojos CHICOS(variedad de diseños)" onclick="abrirModal(this)">
-          <h3>Ojos CHICOS(variedad de diseños)</h3>
-          <p>$18.000 (x200)</p>
-        </div>
-        <div class="card">
-          <img src="img/ojos.jpg" alt="Ojos(variedad de diseños)" onclick="abrirModal(this)">
-          <h3>Ojos(variedad de diseños)</h3>
-          <p>$10.500 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/brochetas.jpg" alt="Brochetas ojos" onclick="abrirModal(this)">
-          <h3>Brochetas ojos</h3>
-          <p>$12.000 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/smack_bar.jpg" alt="Smack bar." onclick="abrirModal(this)">
-          <h3>Smack bar</h3>
-          <p>$6.500(12 unidades)</p>
-        </div>
-        <div class="card">
-          <img src="img/mecha.jpg" alt="Mechas mágicas" onclick="abrirModal(this)">
-          <h3>Mechas mágicas</h3>
-          <p>$13.000 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
-          <h3>Foot Lollipop</h3>
-          <p>$13.000 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/ponyy.jpg" alt="Pony spray candy" onclick="abrirModal(this)">
-          <h3>Pony spray candy</h3>
-          <p>$16.000 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/psncho.jpg" alt="Gomitas pizza/pancho/coca" onclick="abrirModal(this)">
-          <h3>Gomitas con forma</h3>
-          <p>$12.000 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/latas.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
-          <h3>Latitas con chicles</h3>
-          <p>$17.000 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/botellas.jpg" alt="Botellitas con chicles" onclick="abrirModal(this)">
-          <h3>Botellitas con chicles</h3>
-          <p>$13.000 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/chupetines.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
-          <h3>Chupetines con formas</h3>
-          <p>$12.000,00 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/metroc.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
-          <h3>Chicle x metro</h3>
-          <p>$12.000,00 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/corona.jpg" alt="Coronas LED" onclick="abrirModal(this)">
-          <h3>Coronas LED</h3>
-          <p>$12.000,00 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/tel.jpg" alt="Auto/camiseta/celular/spiderman + chicles" onclick="abrirModal(this)">
-          <h3>Celu + chicles</h3>
-          <p>$14.000,00 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/trompet.jpg" alt="Trompetas con chupetines" onclick="abrirModal(this)">
-          <h3>Trompetas con chupetines</h3>
-          <p>$17.000,00 (x60)</p>
-        </div>
-        <div class="card">
-          <img src="img/nutello.jpg" alt="Nutello" onclick="abrirModal(this)">
-          <h3>Nutello</h3>
-          <p>$13.000,00 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/popping.jpg" alt="Polvo ácido Popping candy" onclick="abrirModal(this)">
-          <h3>Polvo ácido Popping Candy</h3>
-          <p>$12.000,00 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/coolmint.jpg" alt="Cool Mint" onclick="abrirModal(this)">
-          <h3>Cool Mint (mentitas)</h3>
-          <p>$12.000,00 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/merliina.jpg" alt="Eyeball caramelo duro Merlina" onclick="abrirModal(this)">
-          <h3>Eyeball caramelo duro Merlina</h3>
-          <p>$12.000,00 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/monedas.jpg" alt="Monedas de chocolate" onclick="abrirModal(this)">
-          <h3>Monedas de chocolate</h3>
-          <p>$17.000,00 (x200)</p>
-        </div>
-        <div class="card">
-          <img src="img/animalitos.jpg" alt="Gelatinas con forma de animales" onclick="abrirModal(this)">
-          <h3>Gelatinas con forma de animales</h3>
-          <p>$4.000,00 (x12)</p>
-        </div>
-        </div>
-      </section>
-      <section class="seccion">
-        <h2 class="hero-buttons">Juguetes</h2>
-        <div class="portfolio">
-        <div class="card">
-          <img src="img/alcancias.jpg" alt="Alcancías con gelatinas" onclick="abrirModal(this)">
-          <h3>Alcancías con gelatinas</h3>
-          <p>$48.000,00 (x12) / $90.000,00 (x24)</p>
-        </div>
-        <div class="card">
-          <img src="img/burbujero.jpg" alt="Burbujero" onclick="abrirModal(this)">
-          <h3>Burbujero</h3>
-          <p>$19.000,00 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/transformer.jpg" alt="Transformers" onclick="abrirModal(this)">
-          <h3>Transformers</h3>
-          <p>$32.000,00 (x9)</p>
-        </div>
-        <div class="card">
-          <img src="img/dispenser.jpg" alt="Dispenser con chicles" onclick="abrirModal(this)">
-          <h3>Dispenser con chicles</h3>
-          <p>$45.000,00 (x8)</p>
-        </div>
-        <div class="card">
-          <img src="img/sorpresa.jpg" alt="Huevos sorpresa" onclick="abrirModal(this)">
-          <h3>Huevos sorpresa</h3>
-          <p>$14.000,00 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/poke.jpg" alt="Bolas Pokémon con sorpresa y caramelo" onclick="abrirModal(this)">
-          <h3>Bolas Pokémon con sorpresa y caramelo</h3>
-          <p>$14.000,00 (x30)</p>
-        </div>
-        <div class="card">
-          <img src="img/cangrejo.jpg" alt="Cangrejo" onclick="abrirModal(this)">
-          <h3>Cangrejo</h3>
-          <p></p>
-        </div>
+            <img src="img/bull_dog_frutillaa.jpg" alt="Bull dog" onclick="abrirModal(this)">
+            <h3>Gomitas Bull dog</h3>
+            <p>$6.800 (360g)</p>
+          </div>
+            <div class="card">
+            <img src="img/gomutcho_acidos.jpg" alt="Gomitas Gomutcho acidos" onclick="abrirModal(this)">
+            <h3>Gomitas acidas</h3>
+            <p>$5.800 (500g)</p>
+          </div>
+          <div class="card">
+            <img src="img/oblita.jpg" alt="Cubanitos" onclick="abrirModal(this)">
+            <h3>Cubanitos</h3>
+            <p>$5.800 (48 unidades)</p>
+          </div>
+          <div class="card">
+            <img src="img/bombones_surtidos.jpg" alt="Bombones Surtidos" onclick="abrirModal(this)">
+            <h3>Bombones Surtidos</h3>
+            <p>$9.000 (50 unidades)</p>
+          </div>
+          <div class="card">
+            <img src="img/anillos.jpg" alt="Anillos" onclick="abrirModal(this)">
+            <h3>Gomitas Anillos</h3>
+            <p>$7.800 (700g)</p>
+          </div>
+          <div class="card">
+            <img src="img/chicle.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
+            <h3>Chicle por metro</h3>
+            <p>$12.000,00</p>
+          </div>
+          <div class="card">
+            <img src="img/gallinitas.jpg" alt="Gallinitas" onclick="abrirModal(this)">
+            <h3>Gallinitas</h3>
+            <p>$8.500 (25 unidades)</p>
+          </div>
+          <div class="card">
+            <img src="img/yummy_frutilla_com_crema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+            <h3>Gomitas Yummy frutilla con crema</h3>
+            <p>$6.800(500g)</p>
+          </div>
+          <div class="card">
+            <img src="img/ojoschicos.jpg" alt="Ojos CHICOS(variedad de diseños)" onclick="abrirModal(this)">
+            <h3>Ojos CHICOS(variedad de diseños)</h3>
+            <p>$18.000 (x200)</p>
+          </div>
+          <div class="card">
+            <img src="img/ojos.jpg" alt="Ojos(variedad de diseños)" onclick="abrirModal(this)">
+            <h3>Ojos(variedad de diseños)</h3>
+            <p>$10.500 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/brochetas.jpg" alt="Brochetas ojos" onclick="abrirModal(this)">
+            <h3>Brochetas ojos</h3>
+            <p>$12.000 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/smack_bar.jpg" alt="Smack bar." onclick="abrirModal(this)">
+            <h3>Smack bar</h3>
+            <p>$6.500(12 unidades)</p>
+          </div>
+          <div class="card">
+            <img src="img/mecha.jpg" alt="Mechas mágicas" onclick="abrirModal(this)">
+            <h3>Mechas mágicas</h3>
+            <p>$13.000 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
+            <h3>Foot Lollipop</h3>
+            <p>$13.000 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/ponyy.jpg" alt="Pony spray candy" onclick="abrirModal(this)">
+            <h3>Pony spray candy</h3>
+            <p>$16.000 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/psncho.jpg" alt="Gomitas pizza/pancho/coca" onclick="abrirModal(this)">
+            <h3>Gomitas con forma</h3>
+            <p>$12.000 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/latas.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
+            <h3>Latitas con chicles</h3>
+            <p>$17.000 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/botellas.jpg" alt="Botellitas con chicles" onclick="abrirModal(this)">
+            <h3>Botellitas con chicles</h3>
+            <p>$13.000 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/chupetines.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
+            <h3>Chupetines con formas</h3>
+            <p>$12.000,00 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/metroc.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
+            <h3>Chicle x metro</h3>
+            <p>$12.000,00 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/corona.jpg" alt="Coronas LED" onclick="abrirModal(this)">
+            <h3>Coronas LED</h3>
+            <p>$12.000,00 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/tel.jpg" alt="Auto/camiseta/celular/spiderman + chicles" onclick="abrirModal(this)">
+            <h3>Celu + chicles</h3>
+            <p>$14.000,00 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/trompet.jpg" alt="Trompetas con chupetines" onclick="abrirModal(this)">
+            <h3>Trompetas con chupetines</h3>
+            <p>$17.000,00 (x60)</p>
+          </div>
+          <div class="card">
+            <img src="img/nutello.jpg" alt="Nutello" onclick="abrirModal(this)">
+            <h3>Nutello</h3>
+            <p>$13.000,00 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/popping.jpg" alt="Polvo ácido Popping candy" onclick="abrirModal(this)">
+            <h3>Polvo ácido Popping Candy</h3>
+            <p>$12.000,00 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/coolmint.jpg" alt="Cool Mint" onclick="abrirModal(this)">
+            <h3>Cool Mint (mentitas)</h3>
+            <p>$12.000,00 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/merliina.jpg" alt="Eyeball caramelo duro Merlina" onclick="abrirModal(this)">
+            <h3>Eyeball caramelo duro Merlina</h3>
+            <p>$12.000,00 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/monedas.jpg" alt="Monedas de chocolate" onclick="abrirModal(this)">
+            <h3>Monedas de chocolate</h3>
+            <p>$17.000,00 (x200)</p>
+          </div>
+          <div class="card">
+            <img src="img/animalitos.jpg" alt="Gelatinas con forma de animales" onclick="abrirModal(this)">
+            <h3>Gelatinas con forma de animales</h3>
+            <p>$4.000,00 (x12)</p>
+          </div>
+          <div class="card">
+            <img src="img/alcancias.jpg" alt="Alcancías con gelatinas" onclick="abrirModal(this)">
+            <h3>Alcancías con gelatinas</h3>
+            <p>$48.000,00 (x12) / $90.000,00 (x24)</p>
+          </div>
+          <div class="card">
+            <img src="img/burbujero.jpg" alt="Burbujero" onclick="abrirModal(this)">
+            <h3>Burbujero</h3>
+            <p>$19.000,00 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/transformer.jpg" alt="Transformers" onclick="abrirModal(this)">
+            <h3>Transformers</h3>
+            <p>$32.000,00 (x9)</p>
+          </div>
+          <div class="card">
+            <img src="img/dispenser.jpg" alt="Dispenser con chicles" onclick="abrirModal(this)">
+            <h3>Dispenser con chicles</h3>
+            <p>$45.000,00 (x8)</p>
+          </div>
+          <div class="card">
+            <img src="img/sorpresa.jpg" alt="Huevos sorpresa" onclick="abrirModal(this)">
+            <h3>Huevos sorpresa</h3>
+            <p>$14.000,00 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/poke.jpg" alt="Bolas Pokémon con sorpresa y caramelo" onclick="abrirModal(this)">
+            <h3>Bolas Pokémon con sorpresa y caramelo</h3>
+            <p>$14.000,00 (x30)</p>
+          </div>
+          <div class="card">
+            <img src="img/cangrejo.jpg" alt="Cangrejo" onclick="abrirModal(this)">
+            <h3>Cangrejo</h3>
+            <p></p>
+          </div>
         </div>
       </section>
     </section>
@@ -259,7 +254,8 @@
         <a href="#" class="back-to-top">⬆ Volver arriba</a>
       </div>
     </div>
-  
+
+   
 </footer>
 
   <script src="js/catalogo.js"></script>
