--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 </header>
 
 
-<aside class="hero" style="background-image: url('img/hero-golosinas.jpg');">
-  <div class="hero-overlay"></div>
-  <h2>Bienvenidos a Golosinas Aries <span class="emoji">♈🔥</span></h2>
-  <p>Golosinas, juguetes y combos personalizados.</p>
-</aside>
+  <!-- Hero -->
+  <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
+    <div class="hero-overlay"></div>
+    <h2>Bienvenidos a Golosinas Aries <span class="emoji">♈🔥</span></h2>
+    <p>Golosinas, juguetes y combos personalizados.</p>
+  </aside>
 
 
   <main>
    <!-- Productos Destacados -->
     <section class="destacados">
-
       <h2>Productos en Promoción</h2>
       <div class="portfolio">
 
