--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </aside>
   <div class="titulo-contenedor">
     <h1 class="titulo-animado">
-      Envíos a todo el país <span class="emoji">📦</span> - Golosinas Aries <span class="emoji">♈🔥</span>
+      Envíos a todo el país <span class="emoji">📦</span>  Golosinas Aries <span class="emoji">♈🔥</span>
     </h1>
     <nav>
       <a href="index.html">Inicio</a>
